# gatt-server

./: CMakeLists.txt  gatt_server.c
bluetooth/: CMakeLists.txt
lib/: libbluetooth.so.3.19.8
src/shared/: CMakeLists.txt  att.c  gatt-client.c  gatt-db.c  gatt-db.h  gatt-helpers.c  gatt-server.c  util.c  util.h
toolchain/: R328.cmake
